--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -99,3 +99,14 @@
 .down-vote.downvoted {
     color: cornflowerblue;
 }
+
+.form_center {
+    display: flex;
+    justify-content: center;
+    width: 100%
+}
+
+.form_center form {
+    width: 50%;
+    margin-top: 2%;
+}
